fix: version 4.2 -- change the base64 library to common library in basic JDK.